# NovaType

./: .gitignore  Cargo.toml  HANDOFF.md  LICENSE  PLAN.md  PROGRESS.md  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.novatype/: user.redb
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/novatype-agent/: Cargo.toml
crates/novatype-agent/src/: lib.rs
crates/novatype-cli/: Cargo.toml
crates/novatype-cli/src/: main.rs
crates/novatype-core/: Cargo.toml
crates/novatype-core/src/: lib.rs
crates/novatype-core/tests/: benchmark.rs
crates/novatype-dict/: Cargo.toml
crates/novatype-dict/src/: lib.rs
crates/novatype-llm/: Cargo.toml
crates/novatype-llm/src/: lib.rs
crates/novatype-model/: Cargo.toml
crates/novatype-model/src/: lib.rs
crates/novatype-protocol/: Cargo.toml
crates/novatype-protocol/src/: lib.rs
crates/novatype-server/: Cargo.toml
crates/novatype-server/src/: main.rs
installer/windows/: build-package.ps1  check-size.ps1  novatype.iss
