[package]
name = "novatype-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
interprocess = "2"
novatype-core = { path = "../novatype-core" }
novatype-model = { path = "../novatype-model" }
novatype-protocol = { path = "../novatype-protocol" }

[lints]
workspace = true
