[package]
name = "novatype-desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "novatype_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
novatype-core = { path = "../../../crates/novatype-core" }
novatype-model = { path = "../../../crates/novatype-model" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[lints]
workspace = true
